[package]
name = "launcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = "fat"
panic = "abort"
strip = "symbols"

[dependencies]
anyhow = "1.0.71"
serde = { version = "1.0.164", features = ["derive"] }
serde_yaml = "0.9.21"

[build-dependencies]
winres = "0.1.12"
